--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -102,7 +102,7 @@ binary decision.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a content switcher group.](images/content-switcher-usage-2.png)
+![Anatomy of a content switcher group.](images/contentswitcher-usage-2.png)
 
 </Column>
 </Row>
@@ -138,12 +138,12 @@ of all other tabs should match the widest tab.
 <DoDontRow>
   <DoDont caption="Do base content tab width on the longest text label.">
 
-![Do base content tab width on the longest text label.](images/content-switcher-usage-3-do.png)
+![Do base content tab width on the longest text label.](images/contentswitcher-usage-3-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not use a different width for each content tab.">
 
-![Do not use a different width for each content tab.](images/content-switcher-usage-3-don't.png)
+![Do not use a different width for each content tab.](images/contentswitcher-usage-3-dont.png)
 
   </DoDont>
 </DoDontRow>
@@ -179,7 +179,7 @@ The content switcher includes two content tab states: **selected** and
 <Row>
 <Column colLg={8}>
 
-![Selected and unselected content switcher states.](images/content-switcher-usage-4.png)
+![Selected and unselected content switcher states.](images/contentswitcher-usage-4.png)
 
 </Column>
 </Row>
